--- a/src/popup/Popup.scss
+++ b/src/popup/Popup.scss
@@ -11,9 +11,7 @@ body {
     background-color: $background-color;
     border: 2px solid $primary-color;
     color: $primary-color;
-    display: flex;
     font-size: 20px;
-    height: 75px;
     justify-content: center;
-    width: 150px;
+    min-width: 150px;
 }
